[project]
name = "caesar"
version = "0.1.0"
description = "Caeser Cipher implementation"
authors = [
    {name = "Jean Cr",email = "jeaneueu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "192"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
